@@ -34,6 +34,7 @@ API:
  *
 
 Backend:
+ * support showing source files in blame view (works also via links)
  * support project copy with makeoriginolder option
 
 Shipment:
